Workaround for possible GNU GCC 4.7/4.8 bug #52841 in C++11 mode. There are no issues detected compiling with GNU GCC 4.7 in C++03 mode. #52841 (http://gcc.gnu.org/bugzilla/show_bug.cgi?id=52841)